feat: refactor product specification and variant models with normalized database schema and entities